--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guide to a Web Devoloper</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <div class="top-icons">
+    <div class="home">
         <h4><a href="index.html">Home</a></h4>
-        <h4><a href="gallery.html", target="_blank">Gallery</a></h4>
-        <h5><a href="best resources.html", target="_blank">Best Resources</a></h5>
+    </div>
+    <div class="gallery">
+        <h4><a href="gallery.html", target="_blank"><strong>Gallery</strong></a></h4>
+    </div>
+    <div class="best-res">
+        <h5><a href="best resources.html", target="_blank"><strong>Best Resources</strong></a></h5>
+    </div>
+    <div class="faq">
         <h5><a href="faq.html", target="_blank">#FAQ</a></h5>
+    </div>
+    <div class="about">
         <h5><a href="about.html", target="_blank">About</a></h5>
     </div>
     <h1>WEB DEVOLOPMENT</h1>
