added some more css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <div class="home">
+    <!---<div class="home">
         <h4><a href="index.html">Home</a></h4>
     </div>
     <div class="gallery">
@@ -21,11 +21,20 @@
     </div>
     <div class="about">
         <h5><a href="about.html", target="_blank">About</a></h5>
+    </div> --->
+    <div class="head">
+    <h1><strong>WEB DEVOLOPMENT</strong></h1>
     </div>
-    <h1>WEB DEVOLOPMENT</h1>
+    <div class="head2">
     <h2>What is web devolopment?</h2>
-    <p>Web development is the work involved in developing a website for the Internet or an intranet. 
-        Web development can range from developing a simple single static page of plain text to complex web-based internet applications, electronic businesses, and social network services</p>
+    </div>
+    <div class="intro">
+    <p>Web development is the work involved in developing a website for 
+        the Internet or an intranet. Web development can range from
+        developing a simple single static page of plain text to 
+        complex web-based internet applications, 
+        electronic businesses, and social network services</p>
+    </div>
     <br>
         <h3>Start Now!!</h3>
     <br>
