--- a/index.html
+++ b/index.html
@@ -7,21 +7,18 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <!---<div class="home">
-        <h4><a href="index.html">Home</a></h4>
+    <div class="nav">
+        <ul>
+            <li><a href="", target="_blank">Home</a></li>
+            <li><a href="", target="_blank">Gallery</a></li>
+            <li><a href="", target="_blank">Services</a></li>
+            <li><a href="", target="_blank">Contact</a></li>
+            <li><a href="", target="_blank">#FAQ</a></li>
+            <li><a href="", target="_blank">Resources</a></li>
+            <li><a href="", target="_blank">About</a></li>
+        </ul>
     </div>
-    <div class="gallery">
-        <h4><a href="gallery.html", target="_blank"><strong>Gallery</strong></a></h4>
-    </div>
-    <div class="best-res">
-        <h5><a href="best resources.html", target="_blank"><strong>Best Resources</strong></a></h5>
-    </div>
-    <div class="faq">
-        <h5><a href="faq.html", target="_blank">#FAQ</a></h5>
-    </div>
-    <div class="about">
-        <h5><a href="about.html", target="_blank">About</a></h5>
-    </div> --->
+
     <div class="head">
     <h1><strong>WEB DEVOLOPMENT</strong></h1>
     </div>
@@ -39,13 +36,14 @@
         <h3>Start Now!!</h3>
     <br>
     <h3>Languages to learn..</h3>
+    <br>
     <ul>
-        <li>HTML5</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>Node.js</li>
-        <li>Python</li>
-        <li>PHP</li>
+        <p>HTML5</p>
+        <p>CSS</p>
+        <p>JavaScript</p>
+        <p>Node.js</p>
+        <p>Python</p>
+        <p>PHP</p>
         
     </ul>
 
