added css elements

--- a/about.html
+++ b/about.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Us</title>
+    <link rel="stylesheet" href="../deepdev369.github.io/css/aboutus.css">
 </head>
 <body>
+    <br>
+    <br>
+    <br>
+    <br>
+    <img src="../deepdev369.github.io/img/fun.jpg" alt="">
     <p>Just some people spending time making websites</p>
     
 </body>
