--- a/faq.html
+++ b/faq.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../deepdev369.github.io/css/faq.css">
 </head>
 <body>
+<h1>Frequently Asked Questions</h1>
+<br>
+<br>
     <ul>
         <h3>What is the use of html in web devolopment?</h3>
         <p>Html is used to to build the skeleton or structure of a website</p>
