--- a/gallery.html
+++ b/gallery.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/galiery.css">
     <title>Gallery</title>
 </head>
 <body>
-    <img src="/img/web.png" width="1900" height="1000" alt="">
-    <img src="img/vscode.png" widht="500" height="500" alt="">
-    <img src="/img/atom.png" width="450" height="450" alt="">
-    <img src="/img/sublime.png" width="500"alt="">
-    <img src="/img/notepad++.png" width="500" alt="">
+    <h1 style="text-align: center;">Gallery</h1>
+    <img src="img/web.png" width="1900" height="1000" alt=""><br>
+    <img src="img/vscode.png" widht="500" height="500" alt=""><br>
+    <img src="img/atom.png" width="450" height="450" alt=""><br>
+    <img src="img/sublime.png" width="500"alt=""><br>
+    <img src="img/notepad++.png" width="500" alt=""><br>
 
     
 </body>
