--- a/best resources.html
+++ b/best resources.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Resources</title>
+    <link rel="stylesheet" href="../deepdev369.github.io/css/resourses.css">
 </head>
 <body>
     <div>
