optimized for android devices

--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guide to a Web Devoloper</title>
-    <link rel="stylesheet" href="../deepdev369.github.io/css/intex.css">
+    <link rel="stylesheet" href="../css/intex.css">
 </head>
 <body>
+    <meta name="viewport" content="480*800, user-scalable=yes">
+    <meta name="viewport" content="480*854, user-scalable=yes">
+    <meta name="viewport" content="1024*600, user-scalable=yes">
+    <meta name="viewport" content="1280*800, user-scalable=yes">
+    
     <div class="nav">
         <ul>
-            <li><a href="../deepdev369.github.io/index.html">Home</a></li>
-            <li><a href="../deepdev369.github.io/gallery.html", target="_blank">Gallery</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../gallery.html", target="_blank">Gallery</a></li>
             <li><a href="", target="_blank">Services</a></li>
-            <li><a href="../deepdev369.github.io/contactus.html", target="_blank">Contact</a></li>
-            <li><a href="../deepdev369.github.io/faq.html", target="_blank">#FAQ</a></li>
-            <li><a href="../deepdev369.github.io/best resources.html", target="_blank">Resources</a></li>
-            <li><a href="../deepdev369.github.io/about.html", target="_blank">About</a></li>
+            <li><a href="../contactus.html", target="_blank">Contact</a></li>
+            <li><a href="../faq.html", target="_blank">#FAQ</a></li>
+            <li><a href="../best resources.html", target="_blank">Resources</a></li>
+            <li><a href="../about.html", target="_blank">About</a></li>
         </ul>
     </div>
     <div class="head">
@@ -106,7 +111,7 @@
     <br>
     <div>
         <h3>Our Team</h3>
-        <h4><a href="https://github.com/dev-machine01", target="_blank">Dev-Machine</a></h4>
+        <h4><a href="https://github.com/sarosx", target="_blank">SarosX</a></h4>
         <h4><a href="https://github.com/deepdev369", target="_blank">Deepdev369</a></h4>
         
     </div>
