added stylish navigation bar

--- a/contactus.html
+++ b/contactus.html
@@ -1,9 +1,14 @@
 <HTML:5>
     <HEAD>
         <title>CONTACT US</title>
-        <link rel="stylesheet" href="../deepdev369.github.io/css/contact.css">
+        <link rel="stylesheet" href="../css/contact.css">
     </HEAD>
     <body>
+        <meta name="viewport" content="480*800, user-scalable=yes">
+        <meta name="viewport" content="480*854, user-scalable=yes">
+        <meta name="viewport" content="1024*600, user-scalable=yes">
+        <meta name="viewport" content="1280*800, user-scalable=yes">
+
         <div>
             <h3 style="font-size: 28px;">Contact Us</h3>
             <br>
