--- a/faq.html
+++ b/faq.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../deepdev369.github.io/css/faq.css">
+    <link rel="stylesheet" href="../css/faq.css">
 </head>
 <body>
+    <meta name="viewport" content="480*800, user-scalable=yes">
+    <meta name="viewport" content="480*854, user-scalable=yes">
+    <meta name="viewport" content="1024*600, user-scalable=yes">
+    <meta name="viewport" content="1280*800, user-scalable=yes">
+    
 <h1>Frequently Asked Questions</h1>
 <br>
 <br>
