--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,11 @@
     <title>Gallery</title>
 </head>
 <body>
+    <meta name="viewport" content="480*800, user-scalable=yes">
+    <meta name="viewport" content="480*854, user-scalable=yes">
+    <meta name="viewport" content="1024*600, user-scalable=yes">
+    <meta name="viewport" content="1280*800, user-scalable=yes">
+    
     <h1 style="text-align: center;">Gallery</h1>
     <img src="img/web.png" width="1900" height="1000" alt=""><br>
     <img src="img/vscode.png" widht="500" height="500" alt=""><br>
