--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta name="viewport" content="1024*600, user-scalable=yes">
     <meta name="viewport" content="1280*800, user-scalable=yes">
     
-    <div class="nav">
-        <ul>
+    <div class="main-nav">
+        <ul class="nav">
             <li><a href="../index.html">Home</a></li>
             <li><a href="../gallery.html", target="_blank">Gallery</a></li>
             <li><a href="", target="_blank">Services</a></li>
@@ -51,7 +51,8 @@
         <p>Node.js</p>
         <p>Python</p>
         <p>PHP</p>
-
+    <br>
+    <br>
     <img src="img/html.png", width="70", height="70" alt="">
     <h3>HTML5</h3>
     <p>Hypertext Markup Language is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such as Cascading Style Sheets and scripting languages such as JavaScript. Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web </p>
