--- a/best resources.html
+++ b/best resources.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Resources</title>
-    <link rel="stylesheet" href="../deepdev369.github.io/css/resourses.css">
+    <link rel="stylesheet" href="../css/resourses.css">
 </head>
 <body>
+    <meta name="viewport" content="480*800, user-scalable=yes">
+    <meta name="viewport" content="480*854, user-scalable=yes">
+    <meta name="viewport" content="1024*600, user-scalable=yes">
+    <meta name="viewport" content="1280*800, user-scalable=yes">
+    
     <div>
         <h1>Best Resources Available</h1>
         <iframe src="https://www.youtube.com/watch?v=UB1O30fR-EE" frameborder="0"></iframe>
