--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guide to a Web Devoloper</title>
-    <link rel="stylesheet" href="../css/intex.css">
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
     <meta name="viewport" content="480*800, user-scalable=yes">
@@ -18,7 +18,7 @@
             <li><a href="../gallery.html", target="_blank">Gallery</a></li>
             <li><a href="", target="_blank">Services</a></li>
             <li><a href="../contactus.html", target="_blank">Contact</a></li>
-            <li><a href="../faq.html", target="_blank">#FAQ</a></li>
+            <li><a href="../faq.html", target="_blank">FAQ</a></li>
             <li><a href="../best resources.html", target="_blank">Resources</a></li>
             <li><a href="../about.html", target="_blank">About</a></li>
         </ul>
