--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         
         <img src="img/atom.png" width="80" alt="">
         <h4><em><a href="https://atom.io/", target="_blank">Atom</a></em></h4>
-        <p>Teletype for Atom. Great things happen when developers work together—from teaching and sharing knowledge to building better software. Teletype for Atom makes collaborating on code just as easy as it is to code alone, right from your editor.</p>
+        <p>Atom is a free and open-source text and source code editor for macOS, Linux, and Microsoft Windows with support for plug-ins written in Node.js, and embedded Git Control, developed by GitHub. Atom is a desktop application built using web technologies.</p>
         
         <img src="img/sublime.png" width="70"alt="">
         <h4><em><a href="https://www.sublimetext.com/", target="_blank">Sublime3</a></em></h4>
@@ -119,7 +119,7 @@
     <br>
     </div>
     <br>
-    <h2 style="text-align-last: center;"><a href="../deepdev369.github.io/contactus.html">CONTACT US</a></h2>
+    <h2 style="text-align-last: center;"><a href="../contactus.html">CONTACT US</a></h2>
     <br>
     <br>
     <hr>
