--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="480*854, user-scalable=yes">
     <meta name="viewport" content="1024*600, user-scalable=yes">
     <meta name="viewport" content="1280*800, user-scalable=yes">
+    <meta name="viewport" content="1280*720, user-scalable=yes">
     
     <div class="main-nav">
         <ul class="nav">
